--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
     <div class="header">
         <div class="header-content">
-	    <img src="images/spoga.png" alt="spoga">
+	    
             <img src="images/LOGO PNG.png" alt="GLOBAL BASE SOURCING LIMITED">
             
             <!-- Add more images as needed -->
@@ -154,8 +154,8 @@
                     <td>Width 100cm x Length 150cm </td>
                 </tr>
                 <tr>
-                    <th>Product CBM</th>
-                    <td>0.00</td>
+                    <th>MOQ </th>
+                    <td>8500</td>
                 </tr>
                 <tr>
                     <th>Product Weight</th>
@@ -163,7 +163,7 @@
                 </tr>
                 <tr>
                     <th>Unit</th>
-                    <td>pcs</td>
+                    <td>Pcs</td>
                 </tr>
                 <tr>
                     <th>Bale Size</th>
@@ -179,27 +179,27 @@
                 </tr>
                 <tr>
                     <th>20 Ft Container Bale Quantity</th>
-                    <td></td>
+                    <td>3500</td>
                 </tr>
                 <tr>
                     <th>40 Ft Container Bale Quantity</th>
-                    <td></td>
+                    <td>7500</td>
                 </tr>
                 <tr>
                     <th>40 HQ Container Bale Quantity</th>
-                    <td>2125 Bale = 8,500 Pcs. = 12,750 SQM (pack in polythene as bale form)</td>
+                    <td>8500 </td>
                 </tr>
                 <tr>
                     <th>Price</th>
-                    <td><button class="link-button" id="myBtn">Show Price</button></td>
+                    <td>USD 10.70 </td>
                 </tr>
                 <tr>
                     <th>FOB Port</th>
-                    <td>NHAVA SHIVA, Mumbai</td>
+                    <td> Mumbai,India </td>
                 </tr>
                 <tr>
-                    <th>More Details - Packaging PPT</th>
-                    <td><button class="link-button" onclick="window.location.href='Link';"> </button></td>
+                    <th>Other Details </th>
+                    <td>Bale Packing </button></td>
                 </tr>
             </table>
         </div>
