--- a/index.html
+++ b/index.html
@@ -178,15 +178,15 @@
                     <td>0.032</td>
                 </tr>
                 <tr>
-                    <th>20 Ft Container Bale Quantity</th>
+                    <th>20 Ft Container Quantity</th>
                     <td>3500</td>
                 </tr>
                 <tr>
-                    <th>40 Ft Container Bale Quantity</th>
+                    <th>40 Ft Container Quantity</th>
                     <td>7500</td>
                 </tr>
                 <tr>
-                    <th>40 HQ Container Bale Quantity</th>
+                    <th>40 HQ Container Quantity</th>
                     <td>8500 </td>
                 </tr>
                 <tr>
